# instagram-cookie-generator

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  instagram_cookies.txt  pylintrc  pyproject.toml
.github/: dependabot.yml
.github/workflows/: manual-container-push-pr.yaml  pull-request.yaml  release.yaml
src/instagram_cookie_generator/: cookie_manager.py  logger.py  main.py  retry.py  webserver.py
src/instagram_cookie_updater/: cookie_manager.py  logger.py  main.py  retry.py  webserver.py
tests/unit/instagram_cookie_generator/: test_cookie_manager.py  test_logger.py  test_retry.py  test_webserver.py
tests/unit/test_instagram_cookie_generator/: test_cookie_manager.py  test_logger.py  test_retry.py  test_webserver.py
