[build-system]
requires = [
  "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-cookie-generator"
version = "0.5.0"
description = "Automatically refresh Instagram cookies and expose health endpoint."
authors = [
    { name="Volodymyr Shcherbinin (vovin)", email="vovin@lurk.kyiv.ua" }
]
dependencies = [
    "Flask==3.1.1",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "selenium==4.33.0",
    "webdriver-manager==4.0.2"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "coverage==7.8.2",
    "isort[colors]==6.0.1",
    "mypy==1.16.0",
    "pylint==3.3.7",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.1",
    "pytest-randomly==3.16.0",
    "pytest-xdist==3.7.0",
    "setuptools==80.9.0",
    "types-Pygments==2.19.0.20250516",
    "types-colorama==0.4.15.20240311",
    "types-pexpect==4.9.0.20250516",
    "types-requests==2.32.0.20250515",
    "types-setuptools==80.9.0.20250529"
]

[tool.black]
line-length = 120
target-version = ['py313']
extend-exclude = '/(build|venv)/'

[tool.isort]
profile = "black"
atomic = true
color_output = true
only_modified = true
line_length = 120
skip = [
    "build/",
    "venv"
]
# `source = "runtime"` is optional if you want to specify the root to isort;
# you can remove or rename as needed.
source = "runtime"

[tool.pylint.main]
fail-under = 9.5
jobs = 0
persistent = false

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
strict = true
exclude = [
    "build/",
    "venv/"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short -q -n auto --randomly-seed=42 --cov=src --cov-report=term-missing"
testpaths = [
    "tests/unit",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [
    "src"
]

[tool.coverage.run]
branch = true
source = [
    "src/instagram_cookie_generator",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
precision = 1
